--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div class="my-style"></div>
+            <h3>Maria Rios loves <em>pizza</em> from New York</em></h3>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
